cr fixes